# LetRecovery

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  README_en.md  SECURITY.md  TODO.md  USER_TERMS.md
.github/scripts/: build-pca2023-pack.ps1  update-website-version.ps1
.github/workflows/: build-and-release.yml  pr-build.yml
PE端/: Cargo.toml  build.rs
PE端/src/: app.rs  main.rs  workflow_journal.rs
PE端/src/core/: account_fix.rs  bcdedit.rs  cabinet.rs  config.rs  disk.rs  dism.rs  dism_exe.rs  driver.rs  expand_move.rs  ghost.rs  mod.rs  pca_preflight.rs  system_utils.rs
PE端/src/native_ui/: controls.rs  details.rs  layout.rs  mod.rs  progress.rs  state.rs  theme.rs  window.rs
PE端/src/ui/: advanced_options.rs  mod.rs  progress.rs
PE端/src/utils/: cmd.rs  i18n.rs  path.rs
PE端/src/workflows/: backup.rs  expand.rs  mod.rs
assets/release/: README.txt  repair_boot.txt
assets/release/lang/: de-DE.json  en-US.json  fr-FR.json  ja-JP.json  ko-KR.json
docs/: DEFENDER_ENGINE_REMOVAL.md  EXPERIMENTAL_WINDOW_BACKDROPS.md  INNO_UI_REFACTOR_HANDOFF.md  PCA2023_COMPAT_PACKAGES.md  PCA2023_RESOURCES.lock.json  THIRD_PARTY_BINARIES.md  xp-i386-textsetup.md
installer/: LICENSE.zh-CN.txt  LetRecovery.iss  NOTICE.zh-CN.txt  README.md  build-installer.ps1
lr-core/: Cargo.toml
lr-core/examples/: build_pca2023_resource_pack.rs
lr-core/src/: bl_passthrough.rs  boot.rs  boot_pca.rs  cached_artifact.rs  command.rs  defender_removal.rs  diskpart.rs  download_integrity.rs  driver.rs  encoding.rs  format_command.rs  fveapi.rs  hash.rs  image_meta.rs  lib.rs  offline_international.rs  pca_compat.rs  pca_preflight.rs  registry.rs  sam.rs  scoped_temp_file.rs  storage_driver_match.rs  traditional_chinese.rs  wim_engine.rs  wimgapi.rs  wimlib.rs  xp.rs  xp_i386.rs  xp_textmode_drv.rs
lr-core/src/operation/: checkpoint.rs  error.rs  mod.rs  retry.rs  support.rs
website-misanthropic-style/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
website-misanthropic-style/src/: App.tsx  main.tsx
website-misanthropic-style/src/styles/: site.css
官网/: package-lock.json  package.json  version.json  vite.config.ts
官网/docs/en/guide/: bitlocker.md  expand-c-drive.md  faq.md  secure-boot-pca.md  system-install.md  terms.md  what-is-letrecovery.md  xp-install.md
官网/docs/guide/: bitlocker.md  expand-c-drive.md  faq.md  secure-boot-pca.md  system-install.md  terms.md  what-is-letrecovery.md  xp-install.md
官网/plugins/: markdown.ts
官网/src/: App.tsx  vite-env.d.ts
官网/src/components/docs/: DocContent.tsx  DocsCopyPage.tsx  DocsOutline.tsx  DocsSearch.tsx  DocsSidebar.tsx
官网/src/components/layout/: Footer.tsx  Header.tsx
官网/src/lib/: docs-navigation.ts  docs.ts  i18n-context.ts  i18n-hooks.ts  language-provider.tsx  translations.ts
官网/src/pages/: About.tsx  Docs.tsx  Home.tsx  NotFound.tsx  QQGroup.tsx
正常系统端/: Cargo.toml  build.rs
正常系统端/src/: app.rs  build_info.rs  main.rs
正常系统端/src/core/: advanced_options.rs  app_config.rs  appx_legacy_impl.rs  bcdedit.rs  bitlocker.rs  cabinet.rs  cli_install.rs  disk.rs  dism.rs  dism_cmd.rs  dismapi.rs  driver.rs  gho_password.rs  ghost.rs  hardware_info.rs  hardware_inspector.rs  image_verify.rs  install_config.rs  iso.rs  mod.rs  native_appx.rs  native_appx_legacy.rs  native_appx_selection.rs  native_backup_controller.rs  native_backup_executor.rs  native_batch_format.rs  native_bitlocker_gate.rs  native_bitlocker_manage.rs  native_boot_repair.rs  native_download_controller.rs  native_download_executor.rs  native_driver_transfer.rs  native_easy_mode_controller.rs  native_expand_c_controller.rs  native_expand_c_executor.rs  native_image_source.rs  native_install_backend.rs  native_install_compat.rs  native_install_controller.rs  native_install_executor.rs  (+25 more)
正常系统端/src/core/hardware_info/: names.rs
正常系统端/src/download/: aria2.rs  config.rs  pe_url_resolver.rs  server_config.rs
正常系统端/src/native_ui/: backdrop.rs  controls.rs  dialog.rs  driver_transfer_dialog.rs  layout.rs  mod.rs  redraw.rs  theme.rs  tool_dialogs.rs  tool_dialogs_mutating.rs  window.rs
正常系统端/src/native_ui/pages/: advanced.rs  backup.rs  download.rs  easy_mode.rs  info.rs  mod.rs  progress.rs  tools.rs
正常系统端/src/native_ui/tools/: appx.rs  batch_format.rs  bitlocker_manage.rs  boot_repair.rs  expand_c.rs  hardware_inspector.rs  mod.rs  network_reset.rs  nvidia_removal.rs  partition_copy.rs  password_reset.rs  quick_partition.rs  storage_driver.rs  time_sync.rs
正常系统端/src/ui/: about.rs  advanced_options.rs  download_progress.rs  easy_mode.rs  embedded_assets.rs  hardware_info.rs  install_progress.rs  online_download.rs  system_backup.rs  system_install.rs
正常系统端/src/ui/tools/: actions.rs  appx.rs  batch_format.rs  bitlocker.rs  driver.rs  expand_c.rs  gho_password.rs  hash_verify.rs  image_verify.rs  mod.rs  nvidia_uninstall.rs  partition_copy.rs  password_reset.rs  quick_partition.rs  software.rs  time_sync.rs  version_detect.rs
正常系统端/src/ui/tools/dialogs/: appx.rs  backup_bitlocker.rs  batch_format.rs  bitlocker_manage.rs  common.rs  driver_backup.rs  install_bitlocker.rs  mod.rs  network.rs  partition_copy.rs  repair_boot.rs  software.rs  storage_driver.rs  time_sync.rs
正常系统端/src/utils/: cmd.rs  dprk_easter_egg.rs  i18n.rs  logger.rs  mod.rs  path.rs  privilege.rs
