[package]
name = "letrecovery-pe"
version = "2026.2.6"
edition = "2021"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors = ["NORMAL-EX"]
description = "LetRecovery PE安装助手"

[features]
# Test harnesses must not trigger a UAC prompt. build.rs rejects this feature
# for release builds so production binaries always require elevation.
non-elevated-tests = []

[dependencies]
# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 多语言（i18n）运行时的全局翻译表读写锁
parking_lot = "0.12"

# Windows API
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Globalization",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_Shutdown",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Registry",
] }

# 两端共享核心库
lr-core = { path = "../lr-core" }

# 动态加载 DLL（libwim-15.dll 由 lr-core 内置释放；setupapi.dll 等系统库）
libloading = "0.8"

# 编码转换
encoding_rs = "0.8"

# 日志
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

# 错误处理
anyhow = "1"
thiserror = "1"

# 其他工具
walkdir = "2"

[build-dependencies]
winres = "0.1"

[[bin]]
name = "LetRecoveryPE"
path = "src/main.rs"
