[package]
name = "lr-core"
version = "2026.2.6"
edition = "2021"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors = ["NORMAL-EX"]
description = "LetRecovery 两端共享的核心库（逐步收纳重复模块）"

[dependencies]
log = "0.4"
libloading = "0.8"
anyhow = "1"
encoding_rs = "0.8"
roxmltree = "0.20"
sha2 = "0.10"
md-5 = "0.10"
url = "2"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_Security_WinTrust",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }

[lib]
name = "lr_core"
path = "src/lib.rs"
