[package]
name = "LetRecovery"
version = "2026.2.6"
edition = "2021"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors = ["NORMAL-EX"]
description = "Windows系统一键重装工具"

[features]
# Explicit opt-in for distributable test builds. Production builds omit this feature, which
# keeps `build_info::DEV` false and removes all test-build labels from the UI.
dev-build = []
# Test harnesses must not trigger a UAC prompt. build.rs rejects this feature
# for release builds so production binaries always require elevation.
non-elevated-tests = []

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# aria2 WebSocket 客户端
aria2-ws = "0.5"
futures = "0.3"

# 网络请求
reqwest = { version = "0.12", features = ["blocking", "json"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# XML 解析（无人值守文件语法校验）
roxmltree = "0.20"

# Windows API
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Storage_Nvme",
    "Win32_Storage_Vhd",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_Multimedia",
    # WMI COM 支持 (替代 wmic 命令行)
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_Wmi",
    # Windows Runtime - APPX包管理
    "Foundation",
    "Foundation_Collections",
    "Management_Deployment",
    "ApplicationModel",
    # 系统时间设置
    "Win32_System_Time",
    # 磁盘格式化和BitLocker支持
    "Win32_System_LibraryLoader",
    "Win32_Security_Cryptography",
    # SetupAPI - 设备驱动管理
    "Win32_Devices_DeviceAndDriverInstallation",
    # 进程管理 - ToolHelp
    "Win32_System_Diagnostics_ToolHelp",
] }
winreg = "0.52"

# 两端共享核心库
lr-core = { path = "../lr-core" }

# 动态加载 DLL（wimlib / fveapi 等）
libloading = "0.8"

# 编码转换
encoding_rs = "0.8"

# 日志
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
tracing-appender = "0.2"
parking_lot = "0.12"

# 错误处理
anyhow = "1"
thiserror = "1"

# 其他工具
chrono = "0.4"
dirs = "5"
walkdir = "2"
rfd = "0.15"
single-instance = "0.3"
clipboard-win = "5.4"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
winres = "0.1"

[[bin]]
name = "LetRecovery"
path = "src/main.rs"
